fixed header alignment

--- a/osh/src/HomePage.css
+++ b/osh/src/HomePage.css
@@ -19,7 +19,6 @@
     position: relative;
 }
 #header-content-left{
-    width: 20%;
     min-width: 150px;
    
 }
@@ -38,7 +37,6 @@
 
 
 #header-content-middle{
-    width: 50%;
 }
 
 #list-container{
